Functional very basic server with rust

--- a/cats/index.html
+++ b/cats/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
+
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Hello </title>
+    <title> attempt </title>
   </head>
+
   <body>
-    <p> Hello world ni</p> 
+    <p> Hello world -null input-</p> 
   </body>
 </html>
